[+] Refactored images API